# VeriEdit

./: .gitignore  AGENTS.md  CHANGE_LOG.md  README.md  SPECS.md  Stroke_Engine_SPEC.md  agent_logs.jsonl  pyproject.toml
scripts/: generate_manual_review_samples.py  generate_test_pairs.py  manual_eval.py
src/tooledit/: __init__.py  _compat.py  cli.py  config.py  policy.py  schemas.py  workflow.py
src/tooledit/agents/: __init__.py  diagnostics.py  executor.py  planner.py  retry.py  reviewer.py
src/tooledit/io/: writer.py
src/tooledit/metrics/: iq_metrics.py  similarity.py
src/tooledit/reports/: report_builder.py
src/tooledit/tools/: __init__.py  color.py  denoise.py  exposure.py  geometry.py  retouch.py  sharpen.py  texture.py
src/veriedit/: __init__.py  _compat.py  cli.py  config.py  human_review.py  llm.py  manual_eval.py  observability.py  policy.py  schemas.py  workflow.py
src/veriedit/agents/: __init__.py  diagnostics.py  executor.py  human_approval.py  planner.py  retry.py  reviewer.py  tool_trial.py
src/veriedit/engine/: __init__.py  actions.py  controller.py  critic.py  engine.py  proposer.py  renderer.py  selector.py  state.py  utils.py
src/veriedit/io/: loader.py  writer.py
src/veriedit/metrics/: iq_metrics.py  regions.py  similarity.py
src/veriedit/reports/: report_builder.py
src/veriedit/runtime/: __init__.py  (+1 more)
tests/: test_cli_clone.py  test_fixture_pairs.py  test_human_approval.py  test_manual_eval.py  test_planner.py  test_policy.py  test_stroke_engine.py  test_tools.py  test_workflow.py
tests/data/: README.md  manifest.json
(+11 files in other folders)
